Adição do JavaDoc