@@ -16,20 +16,33 @@ import javafx.scene.text.Text;
 
 import java.util.List;
 
+/**
+ * Componente gráfico que exibe uma interface para busca, filtragem e exibição de resultados
+ * de mídias, integrando o controlador {@link SearchPaneController} com a interface do usuário.
+ *
+ * Permite o usuário escolher o campo de busca, aplicar filtros de gênero e ano, escolher
+ * a ordenação dos resultados, e navegar para a tela de adição de nova mídia.
+ */
 public class SearchPane implements Component {
-    SearchPaneController controller;
-    RootScene rootScene;
-    SearchTableResult tableResult;
-    StackPane pane;
-    double paddingFloatingButton = 40;
+    private SearchPaneController controller;
+    private RootScene rootScene;
+    private SearchTableResult tableResult;
+    private StackPane pane;
+    private double paddingFloatingButton = 40;
 
-    ComboBox<String> searchBox; //contem o campo que vai ser buscado
-    TextField searchField;
-    FilterItem genreFilter;
-    FilterItem yearFilter;
-    ToggleGroup orderByGroup;
+    private ComboBox<String> searchBox; // Campo de seleção do campo de busca
+    private TextField searchField;      // Campo para digitar o termo de busca
+    private FilterItem genreFilter;     // Filtro para gênero
+    private FilterItem yearFilter;      // Filtro para ano
+    private ToggleGroup orderByGroup;   // Grupo de botões para escolher ordenação
 
-
+    /**
+     * Construtor que associa o painel ao {@link RootScene} e ao controlador de busca.
+     * Inicializa a interface e executa uma busca inicial.
+     *
+     * @param rootScene Cena raiz da aplicação
+     * @param controller Controlador responsável pela lógica da busca e manipulação dos dados
+     */
     public SearchPane(RootScene rootScene, SearchPaneController controller) {
         this.rootScene = rootScene;
         this.controller = controller;
@@ -37,13 +50,20 @@ public class SearchPane implements Component {
         beginSearch();
     }
 
-
+    /**
+     * Retorna o nó JavaFX raiz deste componente para inclusão na cena.
+     *
+     * @return Nó raiz do painel de busca.
+     */
     @Override
     public Node getNode() {
         return pane;
     }
 
-
+    /**
+     * Renderiza toda a interface gráfica do painel de busca,
+     * incluindo barra de busca, filtros, tabela de resultados e botão flutuante.
+     */
     @Override
     public void render() {
         pane = new StackPane();
@@ -67,6 +87,10 @@ public class SearchPane implements Component {
         pane.getChildren().addAll(mainContent, floatingPane);
     }
 
+    /**
+     * Executa a busca conforme os critérios definidos nos campos e filtros da interface,
+     * atualizando os resultados exibidos na tabela.
+     */
     private void beginSearch() {
         controller.setSearchTerm(searchField.getText());
         controller.setSearchField(searchBox.getValue());
@@ -85,6 +109,11 @@ public class SearchPane implements Component {
         tableResult.setSearchResults(controller.getSearchResults(), controller::goTotDisplayPane);
     }
 
+    /**
+     * Cria e retorna o botão flutuante que permite o usuário acessar a tela de adição de nova mídia.
+     *
+     * @return Botão flutuante de adicionar
+     */
     private Button getFloatingButton() {
         Button floatingButton = new Button("+");
         floatingButton.setId("floatingButton");
@@ -94,6 +123,12 @@ public class SearchPane implements Component {
         return floatingButton;
     }
 
+    /**
+     * Renderiza a barra de busca contendo o campo para selecionar o campo de busca,
+     * o campo de texto para o termo de busca e o botão de executar a busca.
+     *
+     * @return HBox contendo os componentes da barra de busca.
+     */
     private HBox renderSearchBar() {
         HBox searchBar = new HBox();
         searchBar.getStyleClass().add("search-bar");
@@ -107,15 +142,12 @@ public class SearchPane implements Component {
         Button searchButton = new Button();
         searchButton.setGraphic(searchIcon);
         searchButton.getStyleClass().add("search-button");
-        searchButton.setOnAction(e ->
-                beginSearch()
-        );
+        searchButton.setOnAction(e -> beginSearch());
 
         searchBox = new ComboBox<>();
         searchBox.getItems().addAll(controller.getListSearchFields());
-        searchBox.setValue(controller.getListSearchFields().getFirst());
+        searchBox.setValue(controller.getListSearchFields().get(0));  // Corrigido getFirst() para get(0)
         searchBox.getStyleClass().add("search-combo-box");
-        //setando no controle o campo colocado acima como valor padrão
 
         searchField = new TextField();
         searchField.setPromptText("Pesquisar...");
@@ -128,6 +160,11 @@ public class SearchPane implements Component {
         return searchBar;
     }
 
+    /**
+     * Renderiza o painel de filtros contendo filtros de gênero, ano e ordenação.
+     *
+     * @return TitledPane contendo os filtros.
+     */
     private TitledPane renderFilterPane() {
         TitledPane filterPane = new TitledPane();
         filterPane.setText("Filtros");
@@ -137,7 +174,6 @@ public class SearchPane implements Component {
 
         HBox filterBox = new HBox();
         genreFilter = new FilterItem("Genêro", EnumUtils.getDescricoes(GenreFilterType.class));
-
         yearFilter = new FilterItem("Ano", EnumUtils.getDescricoes(YearFilterType.class), TextFieldUtil.numericFormatter(4));
 
         Region spacer = new Region();
@@ -157,6 +193,12 @@ public class SearchPane implements Component {
         return filterPane;
     }
 
+    /**
+     * Cria o grupo de botões de rádio para seleção da ordenação dos resultados
+     * (Melhor Avaliado ou Pior Avaliado).
+     *
+     * @return VBox contendo os controles de ordenação.
+     */
     private VBox orderByItem() {
         VBox hBox = new VBox();
         Label label = new Label("Ordernar por");
@@ -170,13 +212,11 @@ public class SearchPane implements Component {
         descending.setUserData("Melhor Avaliado");
         ascending.setUserData("Pior Avaliado");
 
-        // Seleciona o botão "descending" por padrão
         descending.setSelected(true);
 
         // Evita que o botão selecionado seja desmarcado (nenhum selecionado)
         orderByGroup.selectedToggleProperty().addListener((obs, oldVal, newVal) -> {
             if (newVal == null && oldVal != null) {
-                // Restaura a seleção anterior se tentar desmarcar o botão atual
                 oldVal.setSelected(true);
             }
         });
@@ -186,29 +226,43 @@ public class SearchPane implements Component {
         return hBox;
     }
 
+    /**
+     * Classe interna que representa um item de filtro com uma ComboBox para operador
+     * e um TextField para o valor do filtro.
+     */
     private class FilterItem {
         VBox root;
         String itemName;
         ComboBox<String> comboBox;
         TextField textField;
 
-        // Construtor padrão sem formatter
+        /**
+         * Construtor padrão sem formatter.
+         *
+         * @param itemName Nome do filtro
+         * @param operadores Lista de operadores para o filtro
+         */
         FilterItem(String itemName, List<String> operadores) {
-            this(itemName, operadores, null); // Chama o outro construtor com formatter nulo
+            this(itemName, operadores, null);
         }
 
-        // Construtor com TextFormatter opcional
+        /**
+         * Construtor com TextFormatter opcional para validar entrada do campo texto.
+         *
+         * @param itemName Nome do filtro
+         * @param operadores Lista de operadores para o filtro
+         * @param formatter Formatter para o campo texto (pode ser null)
+         */
         FilterItem(String itemName, List<String> operadores, TextFormatter<?> formatter) {
             this.itemName = itemName;
             root = new VBox(5);
-
 
             Text label = new Text(itemName);
             label.getStyleClass().add("filter-label");
 
             comboBox = new ComboBox<>();
             comboBox.getItems().addAll(operadores);
-            comboBox.setValue(operadores.getFirst());
+            comboBox.setValue(operadores.get(0));
             comboBox.getStyleClass().add("filter-combo-box");
 
             textField = new TextField();
@@ -226,10 +280,13 @@ public class SearchPane implements Component {
             root.getChildren().addAll(label, hbox);
         }
 
+        /**
+         * Retorna o nó JavaFX raiz deste item de filtro.
+         *
+         * @return Nó raiz do filtro.
+         */
         Node getNode() {
             return root;
         }
     }
-
-
 }
